--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,7 @@ platform = espressif32
 board = esp32s3usbotg
 framework = arduino
 monitor_speed = 115200
+lib_deps = 
+	me-no-dev/AsyncTCP@^1.1.1
+	esphome/ESPAsyncWebServer-esphome@^3.2.2
+	madhephaestus/ESP32Servo@^3.0.5
