--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	me-no-dev/AsyncTCP@^1.1.1
 	esphome/ESPAsyncWebServer-esphome@^3.2.2
 	madhephaestus/ESP32Servo@^3.0.5
+	olkal/HX711_ADC@^1.2.12
